--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
 				</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="#">Registrasi</a></li>
-						<li><a href="#">Tentang</a></li>
+						<li><a href="https://bit.ly/devcjktmentor2">Registrasi</a></li>
+						<li><a href="#steps">Tentang</a></li>
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob">
@@ -59,10 +59,11 @@
 			<div class="container">
 				<div class="hero__content">
 					<div class="hero__content__inner" id='navConverter'>
-						<h1 class="hero__title">Komunitas PHPID mempersembahkan</h1>
-						<p class="hero__text">Program mentorship dari para mentor terbaik pada bidangnya untuk para member terpilih
+						<h1 class="hero__title">Komunitas PHPID	berkolaborasi dengan FemaleGeek dan Facebook Developer Circles Jakarta</h1>
+						<p class="hero__text">
+								Mempersembahkan program <b>"Mentoring Session"</b>
 						</p>
-						<a href="#" class="button button__accent">Registrasi</a>
+						<a href="https://bit.ly/devcjktmentor2" class="button button__accent">Registrasi</a>
 						<a href="#steps" class="button hero__button">Cari tahu lebih banyak</a>
 					</div>
 				</div>
@@ -125,21 +126,8 @@
 					<img src="./images/undraw_reading_list_4boi.svg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
-					<h2 class="expanded__title">Bagaimana Aturan Mainnya?</h2>
 					<p class="expanded__text">
-						<ul>
-							<li>Teknik belajar One-on-One</li>
-							<li>Topik bebas sesuai pilihan mentor</li>
-							<li>1 topik lamanya adalah 8x diskusi maksimum 2 bulan</li>
-							<li>Mentor bisa punya lebih dari 1 mentee dengan jadwal yang disepakati bersama</li>
-							<li>Tidak ada hak dan kewajiban apapun, karena baik mentor dan mentee bisa menghentikan program kapanpun
-							</li>
-							<li>Mekanisme diskusi belajar dilakukan berdasarkan kesepakatan bersama bisa online, offline, kelas
-								gabungan, dsb</li>
-							<li>Komunitas PHPID hanya menjadi perantara untuk mencari calon mentor dan mentee serta mempertemukannya
-								tapi keputusan akhir siapa mentee yang dipilih ada ditangan mentor</li>
-							<li>Komunitas PHPID akan memiliki mekanisme menilai kualitas baik mentee maupun mentor</li>
-						</ul>
+							<img src="./images/event-banner.jpg">
 					</p>
 				</div>
 			</div>
@@ -167,9 +155,14 @@
 					<img src="./images/undraw_Group_chat_unwm.svg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
-					<h2 class="expanded__title">Sudah siap belajar bersama kami?</h2>
+					<h2 class="expanded__title">
+						Bingung arah karirmu nanti bagaimana?
+						<br><br>
+						Atau perlu tips best practice dalam dunia Technology?</h2>
 					<p class="expanded__text">
-						Belajar sendirian memang menyenangkan, tapi lebih enak kalau bisa belajar bersama-sama dengan bimbingan oleh orang yang sudah terbukti ahli di bidang keilmuannya.
+						PHPID	berkolaborasi dengan FemaleGeek dan Facebook Developer Circles Jakarta mengajak kamu untuk ikutan Mentoring Session dengan Mentor kece dari dunia Startup dan Corporate.
+						<br>
+						Temukan jawaban dari pertanyaan-pertanyaanmu langsung dari mereka.
 					</p>
 				</div>
 			</div>
@@ -183,7 +176,7 @@
 				<p class="cta__sub cta__sub--center">
 					Registrasi dan terus pantau kabar lebih lanjut dari kami
 				</p>
-				<a href="#" class="button button__accent">Registrasi</a>
+				<a href="https://bit.ly/devcjktmentor2" class="button button__accent">Registrasi</a>
 			</div>
 		</div>
 	</div>
@@ -192,11 +185,20 @@
 		<div class="container">
 			<div class="footer__inner">
 
-				<a href="index.html" class="footer__textLogo">
-					Dipersembahkan oleh
+				<div class="footer__textLogo">
+					Dipersembahkan oleh:
 					<br>
-					<img src="images/logo-phpid-putih300.png" />
-				</a>
+					<img src="images/logo-phpid-putih300.png" alt="Logo PHPID"/>
+					<br>
+					Kolaborasi bersama:
+					<br>
+					<a href="https://www.facebook.com/groups/DevCJakarta/" target="_blank" rel="noopener noreferrer">
+						<img src="images/fb-devc.png" alt="Logo Facebook DevC Jakarta"/>
+					</a>
+					<a href="https://www.facebook.com/femalegeek/" target="_blank" rel="noopener noreferrer">
+						<img src="images/female-geek.png" alt="Logo FemaleGeek PHPID" style="border-radius: .5em; margin-left: .5em;"/>
+					</a>
+				</div>
 
 				<div class="footer__data">
 					<div class="footer__data__item">
@@ -218,12 +220,24 @@
 						<div class="footer__row">
 							<a href="https://www.facebook.com/groups/35688476100/" target="_blank" rel="noopener"
 								class="footer__link">
-								Facebook
+								Facebook PHPID
+							</a>
+						</div>
+						<div class="footer__row">
+							<a href="https://www.facebook.com/groups/DevCJakarta/" target="_blank" rel="noopener"
+								class="footer__link">
+								Facebook DevC Jakarta
+							</a>
+						</div>
+						<div class="footer__row">
+							<a href="https://www.facebook.com/femalegeek/" target="_blank" rel="noopener"
+								class="footer__link">
+								Facebook FemaleGeek
 							</a>
 						</div>
 						<div class="footer__row">
 							<a href="https://github.com/phpindonesia/" target="_blank" rel="noopener" class="footer__link">
-								Github
+								Github PHPID
 							</a>
 						</div>
 					</div>
